<resources>
    <string name="app_name">MyMaps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txt_latitud">LATITUD</string>
    <string name="txt_longitud">TextView</string>
    <string name="txt_longitud_">LONGITUD</string>
    <string name="txt_altitud">ALTITUD</string>
    <string name="txt_localizar">LOCALIZAR</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="btn_mapa">MAPA</string>
    <string name="txt_fav">fav</string>
    <string name="txt_favorito">Favorito</string>
    <string name="txt_limpiar_marcas">Limpiar marcas</string>
</resources>