<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="50dp"
        >

        <TextView
            android:id="@+id/txt_latitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_latitud"
            android:layout_marginTop="70dp"/>

        <EditText
            android:id="@+id/editTextLatitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/txt_longitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_longitud_" />

        <EditText
            android:id="@+id/editTextLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/txt_altitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_altitud"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/editTextAltitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/btn_localizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_localizar"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mapa"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

